# video-summary-bot

./: .env.example  .gitignore  README.md  Readme.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: youtube-bot.yml
docs/: USER_MANAGEMENT.md
notebooks/: playground.ipynb
scripts/: migrate_sqlite_to_supabase.py  migrate_users_to_db.py  test_supabase_connection.py
src/: bot.py  config.py  database.py  financial_news_bot.py  financial_news_handler.py  gemini_handler.py  listen_bot.py  migrate_to_db.py  playground.ipynb  scheduler.py  telegram_handler.py  video_summary_bot.py  youtube_handler.py
src/video_summary_bot/: __init__.py  __main__.py  scheduler.py
src/video_summary_bot/bots/: __init__.py  combined.py  financial_news.py  listen.py  video_summary.py
src/video_summary_bot/config/: __init__.py  settings.py  users.py
src/video_summary_bot/core/: __init__.py  financial_news_handler.py
src/video_summary_bot/database/: __init__.py  factory.py  operations.py  postgres_operations.py
src/video_summary_bot/handlers/: __init__.py  telegram.py  youtube.py  youtube_rss.py
src/video_summary_bot/utils/: __init__.py  logger.py  url_parser.py
